--- a/src/style/1-base/mixins.scss
+++ b/src/style/1-base/mixins.scss
@@ -27,7 +27,7 @@
     padding-bottom: 0px;
     padding-right: 3px;
     padding-left: 3px;
-    box-shadow: inset 0 -6px 0 $fauve-col-40;
+    box-shadow: inset 0 -7px 0 $fauve-col-40;
     color : $grey-col;
     transition: all 0.2s ease-in-out;
 
@@ -48,13 +48,14 @@
     padding-bottom: 2px;
     padding-right: 1px;
     padding-left: 1px;
-    box-shadow: inset 0 -20px 0 $fauve-col-40;
+    box-shadow: inset 0 -30px 0 $fauve-col-40;
     color : $grey-col;
     transition: all 0.2s ease-in-out;
 
 }
 
 @mixin fauveUnderlineSmallHover {
+    padding-top : 3px;
     padding-bottom: 2px;
     padding-right: 3px;
     padding-left: 3px;
