--- a/src/style/4-pages/single-projets.scss
+++ b/src/style/4-pages/single-projets.scss
@@ -46,6 +46,11 @@
         padding-bottom: 4%;
         margin-top : 8px;
 
+        a {
+            color: $grey-col-50;
+
+        }
+
     }
 }
 
@@ -166,6 +171,10 @@
         }
 
         .nomenclature {
+
+            .barre-nobold {
+                font-family: "Fira Regular";
+            }
             @include small-button;
             line-height: 20px !important;
             color: $grey-col;
@@ -241,24 +250,6 @@
 
 
 
-    .galleryWrapper {
-        overflow: hidden;
-        width: 100%;
-        height: 800px;
-        padding-bottom: $dCol;
-
-        img {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            object-fit: cover;
-        }
-    }
-
-
-
 
     .projetWrapper {
         margin-top: $dCol;
@@ -267,9 +258,23 @@
 
         .rightColumn {
 
+            strong {
+                @include p-bold;
+
+            }
+
             @include mobile-tab {
                 padding-top: $m-margin-small;
             }
+
+            li {
+                margin-left: $dCol;
+                @include p-very-small;
+                color : $grey-col;
+                list-style-type: circle;
+                }
+
+          
 
 
             width: 60%;
@@ -385,6 +390,7 @@
 
 
             .boutonWrapperProjet {
+                margin-top : 10px;
                 margin-bottom: $dCol;
                 @include p-link;
                 color: $grey-col-50;
@@ -398,6 +404,10 @@
                     padding-left: $dCol;
                     padding-top: 4%;
                     padding-bottom: 4%;
+
+                    a {
+                        color: $grey-col-50;
+                    }
 
                 }
             }
